Project/GpMessages/176297829730200
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Thursday, 24 October 2024 10:56:18</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    0093
    ^^
﻿SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Thursday, 24 October 2024 10:56:18 (Elapsed Time: 0.24 seconds)</msg></messages>